// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Upsell /> Basic Upsell 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter smDirectionRow smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title + dismissButton + image + form 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box flexGrow itemsCenter justifyCenter smDirectionRow smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box flexNone marginBottom4 smMarginBottom0"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="Mask rounding0 willChangeTransform"
          style={
            Object {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Pin"
            className="icon darkGray iconBlock"
            height={32}
            role="img"
            viewBox="0 0 24 24"
            width={32}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
      <div
        className="box flexGrow itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart6 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
        <div
          className="box flexGrow justifyEnd smDisplayFlex smMarginEnd4 smPaddingY3"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <form
            onSubmit={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            <div
              className="Flex rowGap2 flexWrap justifyEnd xsDirectionRow"
            >
              <div
                className="FlexItem flexGrow"
              >
                <div
                  className="box marginBottom0 smMarginBottom2"
                >
                  <span>
                    <div
                      className="box relative"
                    >
                      <input
                        aria-describedby={null}
                        aria-invalid="false"
                        className="textField base enabled normal medium truncate"
                        disabled={false}
                        id="name"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Name"
                        type="text"
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <button
                  aria-label="Submit button"
                  className="button hideOutline inline accessibilityOutline tapTransition md red enabled"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="submit"
                >
                  <div
                    className="Text fontSize300 white alignCenter fontWeightBold"
                  >
                    Submit
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    className="rtlPos"
  >
    <button
      aria-label="Dismiss banner"
      className="parentButton"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button tapTransition enabled"
      >
        <div
          className="pog transparent"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon darkGray iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryAction + dismissButton + image 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box flexNone marginBottom4 smMarginBottom0"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="Mask rounding0 willChangeTransform"
          style={
            Object {
              "height": undefined,
              "width": undefined,
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Pin"
            className="icon darkGray iconBlock"
            height={32}
            role="img"
            viewBox="0 0 24 24"
            width={32}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart6 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          aria-label=""
          className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize300 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="rtlPos"
  >
    <button
      aria-label="Dismiss banner"
      className="parentButton"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button tapTransition enabled"
      >
        <div
          className="pog transparent"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon darkGray iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryAction + dismissButton 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          aria-label=""
          className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize300 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="rtlPos"
  >
    <button
      aria-label="Dismiss banner"
      className="parentButton"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button tapTransition enabled"
      >
        <div
          className="pog transparent"
          style={
            Object {
              "height": 48,
              "width": 48,
            }
          }
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon darkGray iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryAction + secondaryAction 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          aria-label="Learn more: upsell messages"
          className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button lg gray"
          href="pinterest.com/help"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize300 darkGray alignCenter fontWeightBold"
          >
            Learn more
          </div>
        </a>
      </div>
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          aria-label=""
          className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize300 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryAction with href 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <a
          aria-label=""
          className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button lg red"
          href="pinterest.com"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          tabIndex={0}
          target={null}
        >
          <div
            className="Text fontSize300 white alignCenter fontWeightBold"
          >
            Visit Pinterest
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title + primaryAction without href 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter marginBottom4 smDirectionRow smMarginBottom0 smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
    <div
      className="box marginStartAuto smDisplayFlex smMarginEnd4 smPaddingY3"
    >
      <div
        className="box itemsCenter justifyCenter paddingX1 smDisplayFlex smMarginBottomAuto smMarginTopAuto xsDisplayBlock"
      >
        <button
          aria-label=""
          className="button hideOutline block accessibilityOutline parentButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="button hideOutline block accessibilityOutline tapTransition lg red enabled childrenDiv"
          >
            <div
              className="Text fontSize300 white alignCenter fontWeightBold"
            >
              Visit Pinterest
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Upsell /> message + title 1`] = `
<div
  className="box paddingX12 paddingY6 relative rounding4 shadow smDirectionRow smPaddingX8 smPaddingY8 xsDirectionColumn xsDisplayFlex"
>
  <div
    className="box flexWrap smDisplayFlex smMarginBottomN3 smMarginTopN3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="box itemsCenter justifyCenter smDirectionRow smPaddingY3 xsDirectionColumn xsDisplayFlex"
    >
      <div
        className="box itemsCenter marginBottomAuto marginEnd0 marginStart0 marginTopAuto smDisplayBlock smMarginEnd6 smMarginStart0 xsDirectionColumn xsDisplayFlex"
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 648,
            }
          }
        >
          <div
            className="box marginBottom2"
          >
            <div
              className="Text fontSize400 darkGray alignStart breakWord fontWeightBold"
            >
              A Title
            </div>
          </div>
          <div
            className="Text fontSize300 darkGray alignStart breakWord fontWeightNormal"
          >
            Insert a clever upsell message here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
